parkrun-stats - Create a rewrite course function for other invariants that may fail. Refactor Course Event Checker a little.